@@ -6,5 +6,10 @@ EXTRADRIVERS = $(BASE_TMP)floppy/cd-drivers/tree $(BASE_TMP)floppy/net-drivers/t
 EXTRATARGETS = build_floppy_cd-drivers build_floppy_net-drivers
 TARGET = $(INITRD) $(KERNEL) $(BOOT) $(DEBIAN_CD_INFO)
 
+MANIFEST-KERNEL = "kernel for use with isolinux to build a CD"
+MANIFEST-INITRD = "initrd for use with isolinux to build a CD"
+MANIFEST-BOOT = "El Torito boot image for CD"
+MANIFEST-DEBIAN_CD_INFO = "isolinux help screens for CD"
+
 # HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
 TYPE=cdrom-xfs
