@@ -3,6 +3,8 @@ DISK_LABEL = "Network drivers floppy"
 TARGET = $(EXTRA)
 EXTRANAME = $(FLAVOUR)
 
+MANIFEST-EXTRA = "network drivers, including PCMCIA and wireless"
+
 # No kernel.
 KERNELNAME =
 
