@@ -3,5 +3,9 @@ MEDIA_TYPE = netboot image
 TARGET = $(INITRD) $(KERNEL) $(MINIISO)
 EXTRANAME = $(MEDIUM)/
 
+MANIFEST-INITRD = "netboot initrd"
+MANIFEST-KERNEL = "kernel image to netboot"
+MANIFEST-MINIISO = "tiny bootable CD image for pure network install"
+
 # FIXME: Temporary fix, these files should be in a udeb!
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
