@@ -3,7 +3,7 @@ MEDIA_TYPE = CD-ROM
 TARGET = $(BOOT)
 EXTRANAME = $(MEDIUM)-
 
-MANIFEST-BOOT = "$(SUBARCH)/$(MEDIUM)-boot.img: CDROM image for SGI IP22 machines with R4x00 CPU"
+MANIFEST-BOOT = "CDROM image for SGI IP22 machines with R4x00 CPU"
 
 # Create a bootable image for the CD.
 .PHONY: arch_boot
